[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/statue.png" type="Texture" id=1]
[ext_resource path="res://Objects/Shrine.gd" type="Script" id=2]
[ext_resource path="res://Assets/soul.png" type="Texture" id=3]
[ext_resource path="res://Objects/E-key.tscn" type="PackedScene" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.909091, 0.759091 ), -0.982857, -0.982857, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 74.08
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -57.7
radial_accel_random = 1.0
angle_random = 1.0
scale = 4.0
scale_random = 1.0
scale_curve = SubResource( 2 )
hue_variation = 0.1
hue_variation_random = 0.77

[sub_resource type="Animation" id=4]
resource_name = "ScaleIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Soul:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 12.0
height = 40.0

[node name="Shrine" type="Node2D"]
script = ExtResource( 2 )

[node name="Animation" type="Node2D" parent="."]
pause_mode = 2

[node name="Soul" type="Sprite" parent="Animation"]
visible = false
position = Vector2( 0, -30 )
texture = ExtResource( 3 )

[node name="SoulParticles" type="Particles2D" parent="Animation"]
position = Vector2( 0, -56 )
emitting = false
amount = 1000
lifetime = 2.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )

[node name="Anim" type="AnimationPlayer" parent="Animation"]
anims/ScaleIn = SubResource( 4 )

[node name="EKey" parent="Animation" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -24 )
scale = Vector2( 0.404052, 0.404052 )

[node name="Shrine" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, 0 )
rotation = 1.5708
shape = SubResource( 5 )
[connection signal="animation_finished" from="Animation/Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
